--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,19 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cardtable'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19848/1501964889.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mhandnfoot\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcardtable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mhandnfoot\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mhandnfoot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Users\\steve\\Documents\\Git\\hand-n-foot\\handnfoot\\handnfoot.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtypes\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSimpleNamespace\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcardtable\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mStrategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSimpleNamespace\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cardtable'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[B1] (32)\n"
      ]
     }
    ],
@@ -26,28 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'handnfoot' has no attribute 'HNFGame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_12128/43995162.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbasicConfig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'%(levelname)s: %(message)s'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDEBUG\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhandnfoot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mHNFGame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_player\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcardtable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"J\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprecision\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspeed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1.2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mStrategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_player\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcardtable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"S\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprecision\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspeed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mStrategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_player\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcardtable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mPlayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"L\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprecision\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspeed\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mStrategy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'handnfoot' has no attribute 'HNFGame'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Setting up game\n",
+      "INFO: Setting up round 1\n"
      ]
     }
    ],
    "source": [
     "    logging.basicConfig(format='%(levelname)s: %(message)s', level=logging.DEBUG)\n",
     "    g = handnfoot.HNFGame()\n",
-    "    g.add_player(cardtable.Player(\"J\", precision=5, speed=1.2), Strategy())\n",
-    "    g.add_player(cardtable.Player(\"S\", precision=10, speed=1), Strategy())\n",
-    "    g.add_player(cardtable.Player(\"L\", precision=7, speed=1), Strategy())\n",
-    "    g.add_player(cardtable.Player(\"A\", precision=15, speed=.9), Strategy())\n",
+    "    g.add_player(cardtable.Player(\"J\", precision=5, speed=1.2), handnfoot.Strategy())\n",
+    "    g.add_player(cardtable.Player(\"S\", precision=10, speed=1), handnfoot.Strategy())\n",
+    "    g.add_player(cardtable.Player(\"L\", precision=7, speed=1), handnfoot.Strategy())\n",
+    "    g.add_player(cardtable.Player(\"A\", precision=15, speed=.9), handnfoot.Strategy())\n",
     "    #g.game_setup()\n",
     "    #g.round_setup()\n",
     "    g.start()\n",
@@ -56,15 +48,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG: Player J draws [6S[3H]\n",
+      "DEBUG: Player J discards 2C leaving [2D[3S[3H[4H[5H[6S[8S[8D[AC[JC[JS[QC]\n",
+      "DEBUG: Player J draws [JS[*B]\n",
+      "DEBUG: Player J discards *B leaving [2D[3S[3H[4H[5H[6S[8S[8D[AC[JC[JS[JS[QC]\n",
+      "DEBUG: Player J draws [7S[5H]\n",
+      "DEBUG: Player J discards 2D leaving [3S[3H[4H[5H[5H[6S[7S[8S[8D[AC[JC[JS[JS[QC]\n",
+      "DEBUG: Player J draws [KD[7H]\n",
+      "DEBUG: Player J discards 3S leaving [3H[4H[5H[5H[6S[7S[7H[8S[8D[AC[JC[JS[JS[KD[QC]\n",
+      "DEBUG: Player J draws [*R[5S]\n",
+      "DEBUG: Player J discards *R leaving [3H[4H[5S[5H[5H[6S[7S[7H[8S[8D[AC[JC[JS[JS[KD[QC]\n",
+      "DEBUG: Player J draws [8C[6C]\n",
+      "DEBUG: Player J discards 3H leaving [4H[5S[5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[KD[QC]\n",
+      "DEBUG: Player J draws [TC[JH]\n",
+      "DEBUG: Player J discards 4H leaving [5S[5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[JH[KD[QC[TC]\n",
+      "DEBUG: Player J draws [TC[JS]\n",
+      "DEBUG: Player J discards 5S leaving [5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[JS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [AS[7H]\n",
+      "DEBUG: Player J discards 7S leaving [5H[5H[6S[6C[7H[7H[8S[8C[8D[AC[AS[JC[JS[JS[JS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [6S[5D]\n",
+      "DEBUG: Player J lays down [5H[5H[5D]\n",
+      "DEBUG: Player J lays down [6S[6C[6S]\n",
+      "DEBUG: Player J lays down [JC[JS[JS[JS]\n",
+      "DEBUG: Player J discards 8D leaving [7H[7H[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [5H[*B]\n",
+      "DEBUG: Player J lays down [5H]\n",
+      "DEBUG: Player J discards *B leaving [7H[7H[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [7D[3S]\n",
+      "DEBUG: Player J lays down [7H[7H[7D]\n",
+      "DEBUG: Player J discards 3S leaving [8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [AD[9H]\n",
+      "DEBUG: Player J discards 9H leaving [8S[8C[AC[AS[AD[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [7C[7S]\n",
+      "DEBUG: Player J discards AD leaving [7C[7S[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [2H[*R]\n",
+      "DEBUG: Player J discards *R leaving [2H[7C[7S[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [7S[2H]\n",
+      "DEBUG: Player J lays down [7C[7S[7S]\n",
+      "DEBUG: Player J discards JH leaving [2H[2H[8S[8C[AC[AS[KD[QC[TC[TC]\n",
+      "DEBUG: Player J draws [5H[KD]\n",
+      "DEBUG: Player J lays down [5H]\n",
+      "DEBUG: Player J discards QC leaving [2H[2H[8S[8C[AC[AS[KD[KD[TC[TC]\n",
+      "DEBUG: Player J draws [2D[JD]\n",
+      "DEBUG: Player J lays down [2H[2H[2D]\n",
+      "DEBUG: Player J discards JD leaving [8S[8C[AC[AS[KD[KD[TC[TC]\n",
+      "DEBUG: Player J draws [3C[AH]\n",
+      "DEBUG: Player J discards 3C leaving [8S[8C[AC[AS[AH[KD[KD[TC[TC]\n",
+      "DEBUG: Player J draws [KS[JH]\n",
+      "DEBUG: Player J discards AH leaving [8S[8C[AC[AS[JH[KS[KD[KD[TC[TC]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J:\n",
+      "complete: \n",
+      "down: \n",
+      "hand: [2C[2D[3S[4H[5H[8S[8D[AC[JC[JS[QC]\n",
+      "foot: [B3] (11)\n",
+      "J:\n",
+      "complete: \n",
+      "down: [5H[5H[5D[5H[5H]  [6S[6C[6S]  [JC[JS[JS[JS]  [7H[7H[7D]  [7C[7S[7S]  [2H[2H[2D]\n",
+      "hand: [8S[8C[AC[AS[JH[KS[KD[KD[TC[TC]\n",
+      "foot: [B3] (11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.players[0].display()\n",
+    "for i in range(20):\n",
+    "    g.play_turn(player = g.players[0])\n",
+    "g.players[0].display()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"font-size:90px;\">🂨🃘🃑🂡🂻🂮🃎🃎🃚🃚</span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "s = \"\"\n",
+    "for card in g.players[0].get_hand().cards:\n",
+    "    s += (card.get_HTML())\n",
+    "display(HTML('<span style=\"font-size:90px;\">'+s+'</span>'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    g.players[0].display()\n",
-    "    for i in range(50):\n",
-    "        g.play_turn(player = g.players[0])\n",
-    "    g.players[0].display()\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
