--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -55,54 +55,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [6S[3H]\n",
-      "DEBUG: Player J discards 2C leaving [2D[3S[3H[4H[5H[6S[8S[8D[AC[JC[JS[QC]\n",
-      "DEBUG: Player J draws [JS[*B]\n",
-      "DEBUG: Player J discards *B leaving [2D[3S[3H[4H[5H[6S[8S[8D[AC[JC[JS[JS[QC]\n",
-      "DEBUG: Player J draws [7S[5H]\n",
-      "DEBUG: Player J discards 2D leaving [3S[3H[4H[5H[5H[6S[7S[8S[8D[AC[JC[JS[JS[QC]\n",
-      "DEBUG: Player J draws [KD[7H]\n",
-      "DEBUG: Player J discards 3S leaving [3H[4H[5H[5H[6S[7S[7H[8S[8D[AC[JC[JS[JS[KD[QC]\n",
-      "DEBUG: Player J draws [*R[5S]\n",
-      "DEBUG: Player J discards *R leaving [3H[4H[5S[5H[5H[6S[7S[7H[8S[8D[AC[JC[JS[JS[KD[QC]\n",
-      "DEBUG: Player J draws [8C[6C]\n",
-      "DEBUG: Player J discards 3H leaving [4H[5S[5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[KD[QC]\n",
-      "DEBUG: Player J draws [TC[JH]\n",
-      "DEBUG: Player J discards 4H leaving [5S[5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[JH[KD[QC[TC]\n",
-      "DEBUG: Player J draws [TC[JS]\n",
-      "DEBUG: Player J discards 5S leaving [5H[5H[6S[6C[7S[7H[8S[8C[8D[AC[JC[JS[JS[JS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [AS[7H]\n",
-      "DEBUG: Player J discards 7S leaving [5H[5H[6S[6C[7H[7H[8S[8C[8D[AC[AS[JC[JS[JS[JS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [6S[5D]\n",
-      "DEBUG: Player J lays down [5H[5H[5D]\n",
-      "DEBUG: Player J lays down [6S[6C[6S]\n",
-      "DEBUG: Player J lays down [JC[JS[JS[JS]\n",
-      "DEBUG: Player J discards 8D leaving [7H[7H[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [5H[*B]\n",
-      "DEBUG: Player J lays down [5H]\n",
-      "DEBUG: Player J discards *B leaving [7H[7H[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [7D[3S]\n",
-      "DEBUG: Player J lays down [7H[7H[7D]\n",
-      "DEBUG: Player J discards 3S leaving [8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [AD[9H]\n",
-      "DEBUG: Player J discards 9H leaving [8S[8C[AC[AS[AD[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [7C[7S]\n",
-      "DEBUG: Player J discards AD leaving [7C[7S[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [2H[*R]\n",
-      "DEBUG: Player J discards *R leaving [2H[7C[7S[8S[8C[AC[AS[JH[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [7S[2H]\n",
-      "DEBUG: Player J lays down [7C[7S[7S]\n",
-      "DEBUG: Player J discards JH leaving [2H[2H[8S[8C[AC[AS[KD[QC[TC[TC]\n",
-      "DEBUG: Player J draws [5H[KD]\n",
-      "DEBUG: Player J lays down [5H]\n",
-      "DEBUG: Player J discards QC leaving [2H[2H[8S[8C[AC[AS[KD[KD[TC[TC]\n",
-      "DEBUG: Player J draws [2D[JD]\n",
-      "DEBUG: Player J lays down [2H[2H[2D]\n",
-      "DEBUG: Player J discards JD leaving [8S[8C[AC[AS[KD[KD[TC[TC]\n",
-      "DEBUG: Player J draws [3C[AH]\n",
-      "DEBUG: Player J discards 3C leaving [8S[8C[AC[AS[AH[KD[KD[TC[TC]\n",
-      "DEBUG: Player J draws [KS[JH]\n",
-      "DEBUG: Player J discards AH leaving [8S[8C[AC[AS[JH[KS[KD[KD[TC[TC]\n"
+      "DEBUG: Player J draws [5H[4S]\n",
+      "DEBUG: Player J discards *B leaving [2C[2S[2D[4S[5C[5D[5H[6S[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [7S[6D]\n",
+      "DEBUG: Player J discards 2D leaving [2C[2S[4S[5C[5D[5H[6S[6D[7S[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [JS[3C]\n",
+      "DEBUG: Player J discards 3C leaving [2C[2S[4S[5C[5D[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [4C[4S]\n",
+      "DEBUG: Player J discards 5C leaving [2C[2S[4S[4C[4S[5D[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [5H[4D]\n",
+      "DEBUG: Player J discards 4D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [JH[4D]\n",
+      "DEBUG: Player J discards 4D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6D[7S[JS[JH[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [2D[6C]\n",
+      "DEBUG: Player J discards 2D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[JS[JH[KS[KH[KD[QC]\n",
+      "DEBUG: Player J draws [TC[3S]\n",
+      "DEBUG: Player J discards 3S leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[JS[JH[KS[KH[KD[QC[TC]\n",
+      "DEBUG: Player J draws [8D[4H]\n",
+      "DEBUG: Player J discards 4H leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[8D[JS[JH[KS[KH[KD[QC[TC]\n",
+      "DEBUG: Player J draws [KD[8S]\n",
+      "DEBUG: Player J lays down [4S[4C[4S]\n",
+      "DEBUG: Player J lays down [5D[5H[5H]\n",
+      "DEBUG: Player J lays down [KH[KD[KD]\n",
+      "DEBUG: Player J discards 6D leaving [2C[2S[6S[6C[7S[8S[8D[JS[JH[KS[QC[TC]\n",
+      "DEBUG: Player J draws [QD[QD]\n",
+      "DEBUG: Player J discards 7S leaving [2C[2S[6S[6C[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [7S[3H]\n",
+      "DEBUG: Player J discards 3H leaving [2C[2S[6S[6C[7S[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [2C[3C]\n",
+      "DEBUG: Player J lays down [2C[2S[2C]\n",
+      "DEBUG: Player J discards 3C leaving [6S[6C[7S[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [3D[3H]\n",
+      "DEBUG: Player J discards 7S leaving [3D[3H[6S[6C[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [6C[KH]\n",
+      "DEBUG: Player J lays down [6S[6C[6C]\n",
+      "DEBUG: Player J lays down [KH]\n",
+      "DEBUG: Player J discards 8S leaving [3D[3H[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [7H[*B]\n",
+      "DEBUG: Player J discards *B leaving [3D[3H[7H[8D[JS[JH[KS[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [KC[2S]\n",
+      "DEBUG: Player J lays down [2S]\n",
+      "DEBUG: Player J discards 7H leaving [3D[3H[8D[JS[JH[KS[KC[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [5D[9C]\n",
+      "DEBUG: Player J lays down [5D]\n",
+      "DEBUG: Player J discards 8D leaving [3D[3H[9C[JS[JH[KS[KC[QC[QD[QD[TC]\n"
      ]
     },
     {
@@ -112,13 +108,31 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [2C[2D[3S[4H[5H[8S[8D[AC[JC[JS[QC]\n",
-      "foot: [B3] (11)\n",
+      "hand: [*B[2C[2S[2D[5C[5D[6S[KS[KH[KD[QC]\n",
+      "foot: [R3] (11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG: Player J draws [4C[2D]\n",
+      "DEBUG: Player J lays down [4C]\n",
+      "DEBUG: Player J discards 2D leaving [3D[3H[9C[JS[JH[KS[KC[QC[QD[QD[TC]\n",
+      "DEBUG: Player J draws [3S[3D]\n",
+      "DEBUG: Player J lays down [3D[3H[3D]\n",
+      "DEBUG: Player J discards 3S leaving [9C[JS[JH[KS[KC[QC[QD[QD[TC]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "J:\n",
       "complete: \n",
-      "down: [5H[5H[5D[5H[5H]  [6S[6C[6S]  [JC[JS[JS[JS]  [7H[7H[7D]  [7C[7S[7S]  [2H[2H[2D]\n",
-      "hand: [8S[8C[AC[AS[JH[KS[KD[KD[TC[TC]\n",
-      "foot: [B3] (11)\n"
+      "down: [4S[4C[4S[4C]  [5D[5H[5H[5D]  [KH[KD[KD[KH]  [2C[2S[2C[2S]  [6S[6C[6C]  [3D[3H[3D]\n",
+      "hand: [9C[JS[JH[KS[KC[QC[QD[QD[TC]\n",
+      "foot: [R3] (11)\n"
      ]
     }
    ],
@@ -137,7 +151,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size:90px;\">🂨🃘🃑🂡🂻🂮🃎🃎🃚🃚</span>"
+       "<span style=\"font-size:90px;\"><span style=\"color:BLACK\">🃙</span><span style=\"color:BLACK\">🂫</span><span style=\"color:RED\">🂻</span><span style=\"color:BLACK\">🂮</span><span style=\"color:BLACK\">🃞</span><span style=\"color:BLACK\">🃝</span><span style=\"color:RED\">🃍</span><span style=\"color:RED\">🃍</span><span style=\"color:BLACK\">🃚</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -153,6 +167,32 @@
     "for card in g.players[0].get_hand().cards:\n",
     "    s += (card.get_HTML())\n",
     "display(HTML('<span style=\"font-size:90px;\">'+s+'</span>'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span><span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "s = '<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span>'\n",
+    "s += '<span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>'\n",
+    "display(HTML(s))\n",
+    "#from IPython.display import Image\n",
+    "#Image(filename='handnfoot/pcassets/png/ace_of_spades.png') "
    ]
   },
   {
