--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -55,50 +55,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [5H[4S]\n",
-      "DEBUG: Player J discards *B leaving [2C[2S[2D[4S[5C[5D[5H[6S[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [7S[6D]\n",
-      "DEBUG: Player J discards 2D leaving [2C[2S[4S[5C[5D[5H[6S[6D[7S[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [JS[3C]\n",
-      "DEBUG: Player J discards 3C leaving [2C[2S[4S[5C[5D[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [4C[4S]\n",
-      "DEBUG: Player J discards 5C leaving [2C[2S[4S[4C[4S[5D[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [5H[4D]\n",
-      "DEBUG: Player J discards 4D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6D[7S[JS[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [JH[4D]\n",
-      "DEBUG: Player J discards 4D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6D[7S[JS[JH[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [2D[6C]\n",
-      "DEBUG: Player J discards 2D leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[JS[JH[KS[KH[KD[QC]\n",
-      "DEBUG: Player J draws [TC[3S]\n",
-      "DEBUG: Player J discards 3S leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[JS[JH[KS[KH[KD[QC[TC]\n",
-      "DEBUG: Player J draws [8D[4H]\n",
-      "DEBUG: Player J discards 4H leaving [2C[2S[4S[4C[4S[5D[5H[5H[6S[6C[6D[7S[8D[JS[JH[KS[KH[KD[QC[TC]\n",
-      "DEBUG: Player J draws [KD[8S]\n",
-      "DEBUG: Player J lays down [4S[4C[4S]\n",
-      "DEBUG: Player J lays down [5D[5H[5H]\n",
-      "DEBUG: Player J lays down [KH[KD[KD]\n",
-      "DEBUG: Player J discards 6D leaving [2C[2S[6S[6C[7S[8S[8D[JS[JH[KS[QC[TC]\n",
-      "DEBUG: Player J draws [QD[QD]\n",
-      "DEBUG: Player J discards 7S leaving [2C[2S[6S[6C[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [7S[3H]\n",
-      "DEBUG: Player J discards 3H leaving [2C[2S[6S[6C[7S[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [2C[3C]\n",
-      "DEBUG: Player J lays down [2C[2S[2C]\n",
-      "DEBUG: Player J discards 3C leaving [6S[6C[7S[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [3D[3H]\n",
-      "DEBUG: Player J discards 7S leaving [3D[3H[6S[6C[8S[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [6C[KH]\n",
-      "DEBUG: Player J lays down [6S[6C[6C]\n",
-      "DEBUG: Player J lays down [KH]\n",
-      "DEBUG: Player J discards 8S leaving [3D[3H[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [7H[*B]\n",
-      "DEBUG: Player J discards *B leaving [3D[3H[7H[8D[JS[JH[KS[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [KC[2S]\n",
-      "DEBUG: Player J lays down [2S]\n",
-      "DEBUG: Player J discards 7H leaving [3D[3H[8D[JS[JH[KS[KC[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [5D[9C]\n",
-      "DEBUG: Player J lays down [5D]\n",
-      "DEBUG: Player J discards 8D leaving [3D[3H[9C[JS[JH[KS[KC[QC[QD[QD[TC]\n"
+      "DEBUG: Player J draws [5C[3H]\n",
+      "DEBUG: Player J discards 4S leaving [3D[3H[5C[5H[AS[AC[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [7D[9C]\n",
+      "DEBUG: Player J discards 5C leaving [3D[3H[5H[7D[9C[AS[AC[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [5S[2C]\n",
+      "DEBUG: Player J discards 2C leaving [3D[3H[5S[5H[7D[9C[AS[AC[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [KD[3S]\n",
+      "DEBUG: Player J discards 3S leaving [3D[3H[5S[5H[7D[9C[AS[AC[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [4C[KS]\n",
+      "DEBUG: Player J discards 4C leaving [3D[3H[5S[5H[7D[9C[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [3S[3H]\n",
+      "DEBUG: Player J discards 3S leaving [3D[3H[3H[5S[5H[7D[9C[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [5D[9S]\n",
+      "DEBUG: Player J discards 5S leaving [3D[3H[3H[5H[5D[7D[9C[9S[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [9D[JC]\n",
+      "DEBUG: Player J discards 7D leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[JC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [KS[7C]\n",
+      "DEBUG: Player J discards 7C leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [AD[2C]\n",
+      "DEBUG: Player J discards 2C leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [2S[4S]\n",
+      "DEBUG: Player J discards 2S leaving [3D[3H[3H[4S[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [QH[2S]\n",
+      "DEBUG: Player J discards 2S leaving [3D[3H[3H[4S[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [4H[4D]\n",
+      "DEBUG: Player J discards 4S leaving [3D[3H[3H[4H[4D[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [KH[QC]\n",
+      "DEBUG: Player J discards 9D leaving [3D[3H[3H[4H[4D[5H[5D[9C[9S[AS[AC[AD[JC[KS[KS[KD[KD[KH[QC[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [6C[9S]\n",
+      "DEBUG: Player J lays down [3D[3H[3H]\n",
+      "DEBUG: Player J lays down [9C[9S[9S]\n",
+      "DEBUG: Player J lays down [KD[KD[KH]\n",
+      "DEBUG: Player J discards 6C leaving [4H[4D[5H[5D[AS[AC[AD[JC[KS[KS[QC[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [7S[8H]\n",
+      "DEBUG: Player J discards 7S leaving [4H[4D[5H[5D[8H[AS[AC[AD[JC[KS[KS[QC[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [QC[4H]\n",
+      "DEBUG: Player J lays down [4H[4D[4H]\n",
+      "DEBUG: Player J discards 8H leaving [5H[5D[AS[AC[AD[JC[KS[KS[QC[QC[QD[QH[TC[TS[TD[TH]\n",
+      "DEBUG: Player J draws [2D[TC]\n",
+      "DEBUG: Player J lays down [TC[TS[TC]\n",
+      "DEBUG: Player J discards 2D leaving [5H[5D[AS[AC[AD[JC[KS[KS[QC[QC[QD[QH[TD[TH]\n",
+      "DEBUG: Player J draws [JC[*B]\n",
+      "DEBUG: Player J discards *B leaving [5H[5D[AS[AC[AD[JC[JC[KS[KS[QC[QC[QD[QH[TD[TH]\n",
+      "DEBUG: Player J draws [9D[QS]\n",
+      "DEBUG: Player J lays down [QC[QC[QS]\n",
+      "DEBUG: Player J discards 9D leaving [5H[5D[AS[AC[AD[JC[JC[KS[KS[QD[QH[TD[TH]\n"
      ]
     },
     {
@@ -108,31 +110,13 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [*B[2C[2S[2D[5C[5D[6S[KS[KH[KD[QC]\n",
-      "foot: [R3] (11)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG: Player J draws [4C[2D]\n",
-      "DEBUG: Player J lays down [4C]\n",
-      "DEBUG: Player J discards 2D leaving [3D[3H[9C[JS[JH[KS[KC[QC[QD[QD[TC]\n",
-      "DEBUG: Player J draws [3S[3D]\n",
-      "DEBUG: Player J lays down [3D[3H[3D]\n",
-      "DEBUG: Player J discards 3S leaving [9C[JS[JH[KS[KC[QC[QD[QD[TC]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "hand: [3D[4S[5H[AS[AC[KD[QD[TC[TS[TD[TH]\n",
+      "foot: [R1] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [4S[4C[4S[4C]  [5D[5H[5H[5D]  [KH[KD[KD[KH]  [2C[2S[2C[2S]  [6S[6C[6C]  [3D[3H[3D]\n",
-      "hand: [9C[JS[JH[KS[KC[QC[QD[QD[TC]\n",
-      "foot: [R3] (11)\n"
+      "down: [3D[3H[3H]  [9C[9S[9S]  [KD[KD[KH]  [4H[4D[4H]  [TC[TS[TC]  [QC[QC[QS]\n",
+      "hand: [5H[5D[AS[AC[AD[JC[JC[KS[KS[QD[QH[TD[TH]\n",
+      "foot: [R1] (11)\n"
      ]
     }
    ],
@@ -145,13 +129,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_28648\\1892738830.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<span style=\"font-size:90px;\"><span style=\"color:BLACK\">🃙</span><span style=\"color:BLACK\">🂫</span><span style=\"color:RED\">🂻</span><span style=\"color:BLACK\">🂮</span><span style=\"color:BLACK\">🃞</span><span style=\"color:BLACK\">🃝</span><span style=\"color:RED\">🃍</span><span style=\"color:RED\">🃍</span><span style=\"color:BLACK\">🃚</span></span>"
+       "<style>\n",
+       ".cardtable_hand {\n",
+       "    padding-right: 50px; /* Leave room for last card overflow */\n",
+       "}\n",
+       "\n",
+       ".cardtable_hand .cardtable_card {\n",
+       "    overflow: visible;\n",
+       "    width: 20px;\n",
+       "}\n",
+       "\n",
+       ".cardtable_card {\n",
+       "    display: inline-block; \n",
+       "}\n",
+       ".cardtable_card img {\n",
+       "    background-color:white; \n",
+       "    border-radius: 5px; \n",
+       "    border: solid 1px black;\n",
+       "    width: 70px;\n",
+       "}</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -163,15 +173,22 @@
    ],
    "source": [
     "from IPython.core.display import display, HTML\n",
-    "s = \"\"\n",
+    "def css_styling():\n",
+    "    styles = open(\"./styles/cardtable.css\", \"r\").read()\n",
+    "    return f\"<style>{styles}</style>\"\n",
+    "s = css_styling()\n",
+    "\n",
     "for card in g.players[0].get_hand().cards:\n",
     "    s += (card.get_HTML())\n",
-    "display(HTML('<span style=\"font-size:90px;\">'+s+'</span>'))"
+    "#s += g.players[0].get_hand().get_HTML()\n",
+    "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
+    "display(HTML(s))\n",
+    "#print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,6 +202,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span><span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>\n"
+     ]
     }
    ],
    "source": [
@@ -192,7 +216,68 @@
     "s += '<span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>'\n",
     "display(HTML(s))\n",
     "#from IPython.display import Image\n",
-    "#Image(filename='handnfoot/pcassets/png/ace_of_spades.png') "
+    "#Image(filename='handnfoot/pcassets/png/ace_of_spades.png') \n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_28648\\3295603127.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".pile {\n",
+       "    xdisplay: grid;\n",
+       "    xgrid-auto-flow: column;\n",
+       "    xgrid-template-column: 15px;\n",
+       "}\n",
+       ".cardtable_card {\n",
+       "    xgrid-row: 1;\n",
+       "    width: 70px;\n",
+       "    overflow-x: hidden;\n",
+       "}\n",
+       "</style><span class=\"pile\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "s = \"\"\"<style>\n",
+    ".pile {\n",
+    "    xdisplay: grid;\n",
+    "    xgrid-auto-flow: column;\n",
+    "    xgrid-template-column: 15px;\n",
+    "}\n",
+    ".cardtable_card {\n",
+    "    xgrid-row: 1;\n",
+    "    width: 70px;\n",
+    "    overflow-x: hidden;\n",
+    "}\n",
+    "</style>\"\"\"\n",
+    "s += '<span class=\"pile\">'\n",
+    "for card in g.players[0].get_hand().cards:\n",
+    "    s += (card.get_HTML())\n",
+    "s += '</span>'\n",
+    "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
+    "display(HTML(s))\n",
+    "#print(s)"
    ]
   },
   {
@@ -222,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
