allow unicode HTML output

--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -55,52 +55,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [5C[3H]\n",
-      "DEBUG: Player J discards 4S leaving [3D[3H[5C[5H[AS[AC[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [7D[9C]\n",
-      "DEBUG: Player J discards 5C leaving [3D[3H[5H[7D[9C[AS[AC[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [5S[2C]\n",
-      "DEBUG: Player J discards 2C leaving [3D[3H[5S[5H[7D[9C[AS[AC[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [KD[3S]\n",
-      "DEBUG: Player J discards 3S leaving [3D[3H[5S[5H[7D[9C[AS[AC[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [4C[KS]\n",
-      "DEBUG: Player J discards 4C leaving [3D[3H[5S[5H[7D[9C[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [3S[3H]\n",
-      "DEBUG: Player J discards 3S leaving [3D[3H[3H[5S[5H[7D[9C[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [5D[9S]\n",
-      "DEBUG: Player J discards 5S leaving [3D[3H[3H[5H[5D[7D[9C[9S[AS[AC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [9D[JC]\n",
-      "DEBUG: Player J discards 7D leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[JC[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [KS[7C]\n",
-      "DEBUG: Player J discards 7C leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [AD[2C]\n",
-      "DEBUG: Player J discards 2C leaving [3D[3H[3H[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [2S[4S]\n",
-      "DEBUG: Player J discards 2S leaving [3D[3H[3H[4S[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [QH[2S]\n",
-      "DEBUG: Player J discards 2S leaving [3D[3H[3H[4S[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [4H[4D]\n",
-      "DEBUG: Player J discards 4S leaving [3D[3H[3H[4H[4D[5H[5D[9C[9S[9D[AS[AC[AD[JC[KS[KS[KD[KD[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [KH[QC]\n",
-      "DEBUG: Player J discards 9D leaving [3D[3H[3H[4H[4D[5H[5D[9C[9S[AS[AC[AD[JC[KS[KS[KD[KD[KH[QC[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [6C[9S]\n",
-      "DEBUG: Player J lays down [3D[3H[3H]\n",
-      "DEBUG: Player J lays down [9C[9S[9S]\n",
-      "DEBUG: Player J lays down [KD[KD[KH]\n",
-      "DEBUG: Player J discards 6C leaving [4H[4D[5H[5D[AS[AC[AD[JC[KS[KS[QC[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [7S[8H]\n",
-      "DEBUG: Player J discards 7S leaving [4H[4D[5H[5D[8H[AS[AC[AD[JC[KS[KS[QC[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [QC[4H]\n",
-      "DEBUG: Player J lays down [4H[4D[4H]\n",
-      "DEBUG: Player J discards 8H leaving [5H[5D[AS[AC[AD[JC[KS[KS[QC[QC[QD[QH[TC[TS[TD[TH]\n",
-      "DEBUG: Player J draws [2D[TC]\n",
-      "DEBUG: Player J lays down [TC[TS[TC]\n",
-      "DEBUG: Player J discards 2D leaving [5H[5D[AS[AC[AD[JC[KS[KS[QC[QC[QD[QH[TD[TH]\n",
-      "DEBUG: Player J draws [JC[*B]\n",
-      "DEBUG: Player J discards *B leaving [5H[5D[AS[AC[AD[JC[JC[KS[KS[QC[QC[QD[QH[TD[TH]\n",
-      "DEBUG: Player J draws [9D[QS]\n",
-      "DEBUG: Player J lays down [QC[QC[QS]\n",
-      "DEBUG: Player J discards 9D leaving [5H[5D[AS[AC[AD[JC[JC[KS[KS[QD[QH[TD[TH]\n"
+      "DEBUG: Player J draws [TD[6C]\n",
+      "DEBUG: Player J discards 2S leaving [3D[4H[5D[6C[6C[7C[JC[JC[QH[TD[TH[TD]\n",
+      "DEBUG: Player J draws [2D[6S]\n",
+      "DEBUG: Player J discards 2D leaving [3D[4H[5D[6C[6C[6S[7C[JC[JC[QH[TD[TH[TD]\n",
+      "DEBUG: Player J draws [5D[4C]\n",
+      "DEBUG: Player J discards 3D leaving [4C[4H[5D[5D[6C[6C[6S[7C[JC[JC[QH[TD[TH[TD]\n",
+      "DEBUG: Player J draws [9D[4S]\n",
+      "DEBUG: Player J discards 4H leaving [4C[4S[5D[5D[6C[6C[6S[7C[9D[JC[JC[QH[TD[TH[TD]\n",
+      "DEBUG: Player J draws [JH[9H]\n",
+      "DEBUG: Player J discards 7C leaving [4C[4S[5D[5D[6C[6C[6S[9D[9H[JC[JC[JH[QH[TD[TH[TD]\n",
+      "DEBUG: Player J draws [9H[TD]\n",
+      "DEBUG: Player J lays down [6C[6C[6S]\n",
+      "DEBUG: Player J lays down [9D[9H[9H]\n",
+      "DEBUG: Player J lays down [TD[TH[TD[TD]\n",
+      "DEBUG: Player J discards JH leaving [4C[4S[5D[5D[JC[JC[QH]\n",
+      "DEBUG: Player J draws [QS[9D]\n",
+      "DEBUG: Player J lays down [9D]\n",
+      "DEBUG: Player J discards QS leaving [4C[4S[5D[5D[JC[JC[QH]\n",
+      "DEBUG: Player J draws [3C[3S]\n",
+      "DEBUG: Player J discards QH leaving [3C[3S[4C[4S[5D[5D[JC[JC]\n",
+      "DEBUG: Player J draws [KD[TC]\n",
+      "DEBUG: Player J discards KD leaving [3C[3S[4C[4S[5D[5D[JC[JC[TC]\n",
+      "DEBUG: Player J draws [AS[6H]\n",
+      "DEBUG: Player J discards 6H leaving [3C[3S[4C[4S[5D[5D[AS[JC[JC[TC]\n",
+      "DEBUG: Player J draws [5C[AD]\n",
+      "DEBUG: Player J discards 5C leaving [3C[3S[4C[4S[5D[5D[AS[AD[JC[JC[TC]\n",
+      "DEBUG: Player J draws [8C[5S]\n",
+      "DEBUG: Player J discards 5S leaving [3C[3S[4C[4S[5D[5D[8C[AS[AD[JC[JC[TC]\n",
+      "DEBUG: Player J draws [TS[4S]\n",
+      "DEBUG: Player J lays down [4C[4S[4S]\n",
+      "DEBUG: Player J discards 8C leaving [3C[3S[5D[5D[AS[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [8C[8S]\n",
+      "DEBUG: Player J discards AS leaving [3C[3S[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [2S[2D]\n",
+      "DEBUG: Player J discards 2S leaving [2D[3C[3S[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [3C[TH]\n",
+      "DEBUG: Player J lays down [3C[3S[3C]\n",
+      "DEBUG: Player J lays down [TH]\n",
+      "DEBUG: Player J discards 2D leaving [5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [*R[*B]\n",
+      "DEBUG: Player J discards *B leaving [*R[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [AS[2S]\n",
+      "DEBUG: Player J discards *R leaving [2S[5D[5D[8C[8S[AS[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [8C[7H]\n",
+      "DEBUG: Player J lays down [8C[8S[8C]\n",
+      "DEBUG: Player J discards 2S leaving [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n",
+      "DEBUG: Player J draws [2C[4C]\n",
+      "DEBUG: Player J lays down [4C]\n",
+      "DEBUG: Player J discards 2C leaving [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n"
      ]
     },
     {
@@ -110,13 +113,13 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [3D[4S[5H[AS[AC[KD[QD[TC[TS[TD[TH]\n",
-      "foot: [R1] (11)\n",
+      "hand: [2S[3D[4H[5D[6C[7C[JC[JC[QH[TD[TH]\n",
+      "foot: [B3] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [3D[3H[3H]  [9C[9S[9S]  [KD[KD[KH]  [4H[4D[4H]  [TC[TS[TC]  [QC[QC[QS]\n",
-      "hand: [5H[5D[AS[AC[AD[JC[JC[KS[KS[QD[QH[TD[TH]\n",
-      "foot: [R1] (11)\n"
+      "down: [6C[6C[6S]  [9D[9H[9H[9D]  [TD[TH[TD[TD[TH]  [4C[4S[4S[4C]  [3C[3S[3C]  [8C[8S[8C]\n",
+      "hand: [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n",
+      "foot: [B3] (11)\n"
      ]
     }
    ],
@@ -129,17 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_28648\\1892738830.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -161,7 +156,7 @@
        "    border-radius: 5px; \n",
        "    border: solid 1px black;\n",
        "    width: 70px;\n",
-       "}</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span>"
+       "}</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -169,10 +164,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🃅</span><span style=\"background:white;color:RED\">🃅</span><span style=\"background:white;color:RED\">🂷</span><span style=\"background:white;color:BLACK\">🂡</span><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🃚</span><span style=\"background:white;color:BLACK\">🂪</span></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5D[5D[7H[AS[AD[JC[JC[TC[TS]\n"
+     ]
     }
    ],
    "source": [
-    "from IPython.core.display import display, HTML\n",
+    "from IPython.display import display, HTML, Markdown\n",
     "def css_styling():\n",
     "    styles = open(\"./styles/cardtable.css\", \"r\").read()\n",
     "    return f\"<style>{styles}</style>\"\n",
@@ -183,7 +197,15 @@
     "#s += g.players[0].get_hand().get_HTML()\n",
     "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
     "display(HTML(s))\n",
-    "#print(s)"
+    "#print(s)\n",
+    "\n",
+    "s = '<span style=\"font-size: 70px\">'\n",
+    "for card in g.players[0].get_hand().cards:\n",
+    "    s += (card.get_HTML(type=\"unicode\"))\n",
+    "s += \"</span>\"\n",
+    "display(HTML(s))\n",
+    "\n",
+    "print(g.players[0].get_hand())\n"
    ]
   },
   {
@@ -222,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_28648\\3295603127.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_31380\\3295603127.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -247,7 +269,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"pile\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
+       "</style><span class=\"pile\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
